[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "KismetAlertExtractor"
version = "1.0.0"
description = "Extracts alerts from .kismet files"
readme = "README.md"
requires-python = ">=3.13.11"
license = "GPL-3.0-only"
license-files = [
    "LICENSE"
]
authors = [
    {name = "Jamesconlan96", email = "kismetalertextractor@jamesconlan.co.uk"}
]
keywords = [
    "kismet",
    "wireless"
]
dependencies = [
    "tabulate >= 0.9.0"
]

[project.urls]
homepage = "https://github.com/JamesConlan96/KismetAlertExtractor"
source = "https://github.com/JamesConlan96/KismetAlertExtractor"
download = "https://github.com/JamesConlan96/WiSite/releases/KismetAlertExtractor"
issues = "https://github.com/JamesConlan96/WiSite/KismetAlertExtractor"

[project.scripts]
kismetalertextractor = "kismetAlertExtractor:main"

[tool.setuptools]
py-modules = ["kismetAlertExtractor"]
